# sound-search

./: .gitignore  CONTRIBUTING.md  OVERVIEW.md  README.md  environment.yml  pyproject.toml  sample-library-builder-brief.md
.github/workflows/: ci.yml
scratch/: clap_smoke.py  eval_fetch_terms.txt  eval_queries.txt  fetch_eval_clips.py  retrieval_eval.py
src/forage/: __init__.py  audio.py  browse.py  categorize.py  cli.py  config.py  credits.py  embed.py  grow.py  index.py  library.py  licensing.py  predicates.py  sfz.py
src/forage/gui/: __init__.py  app.py  dnd.py  filters.py  main_window.py  models_logic.py  player.py  results_model.py  results_view.py  reveal.py  workers.py
src/forage/sources/: __init__.py  freesound.py
tests/: test_browse.py  test_categorize.py  test_cli.py  test_credits.py  test_grow.py  test_gui_logic.py  test_gui_smoke.py  test_index.py  test_library.py  test_licensing.py  test_oauth.py  test_reindex.py  test_sfz.py  test_validation.py
