[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forage"
version = "0.1.0"
description = "Local-first personal sample-library builder with CLAP semantic search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  # Hard CLAP constraint: numpy must stay <2 (a later pip install can silently break this).
  "numpy<2",
  "torch>=2.4",
  "torchaudio>=2.4",
  "torchvision>=0.19",  # undeclared laion-clap import (FrozenBatchNorm2d); must be installed explicitly
  "laion-clap>=1.1.7",
  "typer>=0.20",
  "sqlite-vec>=0.1.9",
  "requests>=2.31",
  "soundfile>=0.12",
  "librosa>=0.10",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]
# The desktop UI (`forage ui`) is optional — PySide6 is ~100MB and the CLI/grow/search
# must stay usable headless. QtMultimedia (audition) ships in PySide6 >=6.6. Capped
# below 6.8 on Windows only: PySide6 6.11 fails to load QtCore on the Windows 10 dev
# box ("procedure not found" — it needs a newer VC++ runtime). 6.7.x is the
# verified-good range there. On macOS (Apple Silicon) both 6.7.3 and 6.11.1 are
# verified working (QtCore loads, QtMultimedia uses the FFmpeg backend, GUI tests
# pass offscreen), so the cap is skipped there.
gui = [
  "PySide6>=6.6,<6.8; sys_platform == 'win32'",
  "PySide6>=6.6; sys_platform != 'win32'",
]

[project.scripts]
forage = "forage.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
